When reporting a failed download of optional files, be clearer that
this is not an error.  Also, don't treat arbitrary exceptions during
downloads as indicating a missing file, only the expected IOError.

Increase the default disk size from 768M to 1G, as 768M is no
longer sufficient for amd64.

New command line option --structured-log-file.  This is like
--structured-log but takes the name of a log file as an
argument, and the structured logging is in addition to, not
instead of, the traditional logging to stdout.

Increase installation timeout from 1 hour to 3 hours so that
a system built with DEBUG and LOCKDEBUG can be installed under
qemu without timing out.

Unconditionally print a greeting message including the version number
of startup, so that logs from automated anita runs will always
indicate the version used.

In --structured-log mode, log the string matched by expect() instead
of the return value, as the latter is always zero and therefore
conveys no useful information.

- 1.33 released -

Support recent versions of sysinst (CVS date 2014.08.03.16.09.38 or
newer), where set selection happens after disk partitioning rather
than before.

Document qemu 2.0.0nb4 as a known working version.

New command line option --structured-log.

- 1.32 released -

Fix installation of source and debug sets, which had been broken since
the label displayed by sysinst was changed from "Source sets" to
"Source and debug sets".

- 1.31 released -

Fix a failure to consume a shell prompt which would cause it to remain
buffered and later be mistaken for one that had not yet issued.  For
added protection, add a unique serial number to each prompt.

Omit drive index from qemu command line for backwards compatibility
with scripts written for anita 1.29 or older.

Fix X11 set names.

- 1.30 released -

Increase the default timeout for running the NetBSD test
suite from 2 hours to 3 hours.

Add support for installing the new "debug" set, and add a new